name:                yadata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/qtests/yadata#readme
license:             BSD3
license-file:        LICENSE
author:              qtests
maintainer:          qtests@outlook.com
copyright:           2018 qtests
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yadata.LibYahoo
                     , Yadata.LibCSV
                     , Yadata.LibAPI
                     , Yadata.LibTS
                     , Yadata.LibCoinmarketcap
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , regex-pcre-builtin
                     , lens
                     , bytestring
                     , utf8-string
                     , csv
                     , time
                     , mtl >= 2.2.1
                     , http-conduit >= 2.2.3.2
                     , http-client >= 0.5.7.0
                     , http-client-tls >= 0.3.5.0
                     , text >= 1.2.2.2
                     , lens-aeson >= 1.0.2
                     , aeson >= 1.1.2.0
                     , unordered-containers >= 0.2.8.0
                     , Chart
                     , Chart-diagrams
                     , Chart-cairo
                     , cairo >= 0.9.11
                     , colour >= 2.2.1 && < 2.4
                     , process
                     , containers
                     , hxt
                     , MissingH


  default-language:    Haskell2010

executable yadata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yadata
                     , wreq
                     , regex-pcre-builtin
                     , lens
                     , bytestring
                     , utf8-string
                     , csv
                     , time


  default-language:    Haskell2010

test-suite yadata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yadata
                     , wreq
                     , regex-pcre-builtin
                     , lens
                     , bytestring
                     , utf8-string
                     , csv
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/qtests/yadata
